conf: move filtering into output files
Normally filtering is done for a specific output, so it makes sense to
transform logs in the output file.

--- a/conf.d/10_input_kubernetes.conf
+++ b/conf.d/10_input_kubernetes.conf
@@ -1,52 +1,8 @@
 input {
   file {
-    # kubelet created symlinks to docekr container logs
+    # kubelet created symlinks to docker container logs
     path => "/var/log/containers/*.log"
     tags => ["kubernetes", "docker"]
   }
 }
 
-
-filter {
-  # check if message looks like json and try to decode it
-  if [message] =~ /^{.*}$/ {
-    json {
-      source => "message"
-      target => "message"
-    }
-  }
-
-  # check if message["log"] looks like json and try to decode it and flatten
-  # log fields out into a message field
-  if "docker" in [tags] {
-    if [message][log] =~ /^{.*}$/ {
-      json {
-        source => "[message][log]"
-        target => "[message]"
-        remove_field => [ "[message][log]" ]
-      }
-    }
-  }
-
-  # Grab a timestamp from the actual message, rather than at the point of
-  # which events arrive
-  if "docker" in [tags] {
-    date {
-      match => ["[message][time]", "ISO8601"]
-    }
-  }
-
-  # Extract kubernetes metadata
-  if "kubernetes" in [tags] {
-    kubernetes {
-      add_tag => ["kubernetes_filtered"]
-    }
-    mutate {
-      merge => { "message" => "kubernetes" }
-    }
-    json_encode {
-      source => "message"
-      add_tag => ["json_encoded"]
-    }
-  }
-}
