--- a/conf.d/20_output_journald_cloudwatch.conf
+++ b/conf.d/20_output_journald_cloudwatch.conf
@@ -42,7 +42,7 @@ output {
     cloudwatchlogs {
       region => "%AWS_REGION%"
       log_group_name => "%LOG_GROUP_NAME%"
-      log_stream_name => "%LOG_STREAM_NAME%"
+      log_stream_name => "journald/%LOG_STREAM_NAME%"
     }
   }
 }
