--- a/conf.d/10_input_kubernetes.conf
+++ b/conf.d/10_input_kubernetes.conf
@@ -2,6 +2,7 @@ input {
   file {
     # kubelet created symlinks to docker container logs
     path => "/var/log/containers/*.log"
+    sincedb_path => "/var/lib/logstash/.sincedb*"
     tags => ["kubernetes", "docker"]
   }
 }
