--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -4,7 +4,8 @@ filter {
     if [message] =~ /^{.*}$/ {
       json {
         source => "message"
-        target => "message"
+        target => "message_json"
+        remove_field => [ "message" ]
       }
     }
 
