--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -1,6 +1,6 @@
 filter {
   if "kubernetes" and "docker" in [tags] {
-    # check if message looks like json and try to encode it
+    # check if message looks like json and try to decode it
     if [message] =~ /^{.*}$/ {
       json {
         source => "message"
@@ -16,20 +16,21 @@ filter {
           remove_field => [ "[message][time]" ]
         }
       }
-    }
 
-    # check if message["log"] looks like json and try to encode it and flatten
-    # log fields out into a message field
-    if [message][log] =~ /^{.*}$/ {
-      json {
-        source => "[message][log]"
-        target => "[message]"
-        remove_field => [ "[message][log]" ]
+      # Check if message["log"] looks like json and try to encode it and flatten
+      # log fields out into a message field
+      if [message][log] =~ /^{.*}$/ {
+        json {
+          source => "[message][log]"
+          target => "[message_json]"
+          remove_field => [ "[message][log]" ]
+        }
+      } else if [message][log] {
+        mutate {
+          replace => { "message" => "%{[message][log]}" }
+        }
       }
-    } else if [message][log] {
-      mutate {
-        replace => { "message" => "%{[message][log]}" }
-      }
+
     }
 
     # Extract kubernetes metadata
