Use different index types for each application

--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -23,14 +23,13 @@ filter {
         json {
           source => "[message][log]"
           target => "[message_json]"
-          remove_field => [ "[message][log]" ]
+          remove_field => [ "[message]" ]
         }
       } else if [message][log] {
         mutate {
           replace => { "message" => "%{[message][log]}" }
         }
       }
-
     }
 
     # Extract kubernetes metadata
@@ -49,7 +48,7 @@ output {
   if "kubernetes_filtered" in [tags] {
     elasticsearch {
       index => "kubernetes-%{+YYYY.MM.dd}"
-      document_type => "%{[kubernetes][namespace]}"
+      document_type => "%{[kubernetes][namespace]}_%{[kubernetes][pod]}_%{[kubernetes][container_name]}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
     }
   }
