--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -32,7 +32,7 @@ filter {
 output {
   if "journald" in [tags] {
     elasticsearch {
-      index => "journald-%{+YYYY.MM.dd}"
+      index => "journald-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
       document_type => "%{transport}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
     }
