--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -47,7 +47,7 @@ filter {
 output {
   if "kubernetes_filtered" in [tags] {
     elasticsearch {
-      index => "kubernetes-%{+YYYY.MM.dd}"
+      index => "kubernetes-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
       document_type => "%{[kubernetes][namespace]}_%{[kubernetes][pod]}_%{[kubernetes][container_name]}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
     }
