Escape curly braces in regexp patterns and fix issue with docker signal handling by logstash process

--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -1,7 +1,7 @@
 filter {
   if "journald" in [tags] {
     # check if message looks like json and try to decode it
-    if [message] =~ /^{.*}$/ {
+    if [message] =~ /^\{.*\}$/ {
       json {
         source => "message"
         target => "message_json"
