--- a/conf.d/20_output_kubernetes_cloudwatch.conf
+++ b/conf.d/20_output_kubernetes_cloudwatch.conf
@@ -2,7 +2,7 @@
 filter {
   if "kubernetes" and "docker" in [tags] {
     # check if message looks like json and try to decode it
-    if [message] =~ /^{.*}$/ {
+    if [message] =~ /^\{.*\}$/ {
       json {
         source => "message"
         target => "message"
@@ -11,7 +11,7 @@ filter {
 
     # check if message["log"] looks like json and try to decode it and flatten
     # log fields out into a message field
-    if [message][log] =~ /^{.*}$/ {
+    if [message][log] =~ /^\{.*\}$/ {
       json {
         source => "[message][log]"
         target => "[message]"
