--- a/conf.d/20_output_journald_cloudwatch.conf
+++ b/conf.d/20_output_journald_cloudwatch.conf
@@ -2,7 +2,7 @@
 filter {
   if "journald" in [tags] {
     # check if message looks like json and try to decode it
-    if [message] =~ /^{.*}$/ {
+    if [message] =~ /^\{.*\}$/ {
       json {
         source => "message"
         target => "message"
