--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -1,7 +1,7 @@
 filter {
   if "kubernetes" and "docker" in [tags] {
     # check if message looks like json and try to decode it
-    if [message] =~ /^{.*}$/ {
+    if [message] =~ /^\{.*\}$/ {
       json {
         source => "message"
         target => "message"
@@ -19,7 +19,7 @@ filter {
 
       # Check if message["log"] looks like json and try to encode it and flatten
       # log fields out into a message field
-      if [message][log] =~ /^{.*}$/ {
+      if [message][log] =~ /^\{.*\}$/ {
         json {
           source => "[message][log]"
           target => "[message_json]"
