set inactivity check to 60 seconds instead fo 3 hours

--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -35,6 +35,7 @@ output {
       index => "journald-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
       document_type => "%{transport}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
+      validate_after_inactivity => 60
     }
   }
 }
