--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -1,7 +1,7 @@
 output {
   if "kubernetes_filtered" in [tags] {
     elasticsearch {
-      index => "kubernetes-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
+      index => "kubernetes-aftc_dev-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
       document_type => "%{[kubernetes][namespace]}_%{[kubernetes][pod]}_%{[kubernetes][container_name]}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
       validate_after_inactivity => 60
