Adds sincedb_path in inputs

--- a/conf.d/10_input_journald.conf
+++ b/conf.d/10_input_journald.conf
@@ -2,6 +2,7 @@ input {
   journald {
     lowercase => true
     tags => ["journald"]
+    sincedb_path => "/var/lib/logstash/sincedb_journal"
   }
 }
 
