--- a/conf.d/10_input_kubernetes.conf
+++ b/conf.d/10_input_kubernetes.conf
@@ -3,6 +3,7 @@ input {
     # kubelet created symlinks to docker container logs
     path => "/var/log/containers/*.log"
     tags => ["kubernetes", "docker"]
+    sincedb_path => "/var/lib/logstash/sincedb_kubernetes"
   }
 }
 
