Add more params to LS
Mostly for optimizations.

--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -36,6 +36,8 @@ output {
       document_type => "%{transport}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
       validate_after_inactivity => 60
+      idle_flush_time => %ELASTICSEARCH_IDLE_FLUSH_TIME%
+      flush_size => %ELASTICSEARCH_FLUSH_SIZE%
     }
   }
 }
