--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -48,6 +48,8 @@ output {
       document_type => "%{[kubernetes][namespace]}_%{[kubernetes][pod]}_%{[kubernetes][container_name]}"
       hosts => [ "%ELASTICSEARCH_HOST%" ]
       validate_after_inactivity => 60
+      idle_flush_time => %ELASTICSEARCH_IDLE_FLUSH_TIME%
+      flush_size => %ELASTICSEARCH_FLUSH_SIZE%
     }
   }
 }
