Filter out messages exceeding 20kB in size

--- a/conf.d/20_output_journald_elasticsearch.conf
+++ b/conf.d/20_output_journald_elasticsearch.conf
@@ -26,6 +26,12 @@ filter {
       rename => { "_pid" => "pid" }
       rename => { "_uid" => "uid" }
     }
+
+    # Remove messages bigger than ~20kB in size to stop LS sending bulks which are too big.
+    # This calculation is based on default ES max bulk size of 100MB and LS flush_size of 5000.
+    truncate {
+      length_bytes => 20000
+    }
   }
 }
 
