--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -6,6 +6,13 @@ filter {
       remove_field => [ "[message][stream]" ]
     }
 
+    # Remove messages bigger than ~20kB in size to stop LS sending bulks which are too big.
+    # This calculation is based on default ES max bulk size of 100MB and LS flush_size of 5000.
+    truncate {
+      fields => "message"
+      length_bytes => 20000
+    }
+
     # Grab a timestamp from the actual message, rather than at the point of
     # which events arrive
     if [message][time] {
