Audit log pipeline change

--- a/conf.d/20_output_kubernetes_audit_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_audit_elasticsearch.conf
@@ -19,36 +19,43 @@ filter {
       target => "message"
     }
 
-    # Decode endpoint URL
-    urldecode {
-      field => "[message][uri]"
-    }
-
-    # Temporarily slit URI into endpoint / query_string parts 
-    mutate {
-      split => { 
-        "[message][uri]" => "?" 
+    # If URI present
+    if [message][uri] {
+      # Decode endpoint URL
+      urldecode {
+        field => "[message][uri]"
       }
-    }
-
-    # If query_string exists split them into KV pairs
-    if [message][uri][1] {
-      kv {
-        source => "[message][uri][1]"
-        target => "[message][query_params]"
-        field_split => "&"
-        value_split => "="
-        add_field => { "[message][endpoint]" => "%{[message][uri][0]}" }
-        remove_field => "[message][uri]"
-        allow_duplicate_values => false
-        add_tag => ["kubernetes_audit_filtered"]
-      }
-    } else { # No query_string present
+      
+      # Temporarily split URI into endpoint / query_string parts
       mutate {
-        add_field => { "[message][endpoint]" => "%{[message][uri][0]}" }
-        remove_field => "[message][uri]"
-        add_tag => ["kubernetes_audit_filtered"]
-      }        
+        split => { 
+          "[message][uri]" => "?"
+        }
+      }
+
+      # If query_string exists split them into KV pairs
+      if [message][uri][1] {
+        kv {
+          source => "[message][uri][1]"
+          target => "[message][query_params]"
+          field_split => "&"
+          value_split => "="
+          add_field => { "[message][endpoint]" => "%{[message][uri][0]}" }
+          remove_field => "[message][uri]"
+          allow_duplicate_values => false
+        }
+      } else if [message][uri][0] { # No query_string present
+        mutate {
+          add_field => { "[message][endpoint]" => "%{[message][uri][0]}" }
+          remove_field => "[message][uri]"
+        }        
+      }
+    }
+
+    # Rename field to prevent conflicts with other document types
+    mutate {
+      rename => { "message" => "audit" }
+      add_tag => ["kubernetes_audit_filtered"]
     }
   }
 }
