--- a/conf.d/20_output_kubernetes_audit_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_audit_elasticsearch.conf
@@ -62,13 +62,15 @@ filter {
 
 output {
   if "kubernetes_audit_filtered" in [tags] {
-    elasticsearch {
-      index => "kubernetes-%ELASTICSEARCH_INDEX_SUFFIX%%{+YYYY.MM.dd}"
-      document_type => "audit"
-      hosts => [ "%ELASTICSEARCH_HOST%" ]
-      validate_after_inactivity => 60
-      idle_flush_time => %ELASTICSEARCH_IDLE_FLUSH_TIME%
-      flush_size => %ELASTICSEARCH_FLUSH_SIZE%
+    amazon_es {
+        hosts => ["%ELASTICSEARCH_HOST%"]
+        region => "us-east-1"
+        aws_access_key_id => '${AWS_ACCESS_KEY_ID}'
+        aws_secret_access_key => '${AWS_SECRET_ACCESS_KEY}'
+        document_type => "audit"
+        index => "cldaudit-%{[kubernetes][namespace_name]}-%{[meta][cloud][provider]}-%{+YYYY.MM.dd}"
+        idle_flush_time => %ELASTICSEARCH_IDLE_FLUSH_TIME%
+        flush_size => %ELASTICSEARCH_FLUSH_SIZE%
     }
   }
 }
