conf.d: drop few kubernetes namespaces
kube-system
sysdig-trial

--- a/conf.d/20_output_kubernetes_elasticsearch.conf
+++ b/conf.d/20_output_kubernetes_elasticsearch.conf
@@ -4,6 +4,12 @@ filter {
     grok {
         match => { "path" => "/var/log/containers/%{DATA:[kubernetes][pod_name]}_%{DATA:[kubernetes][namespace_name]}_%{GREEDYDATA:[kubernetes][container_name]}-%{DATA:[kubernetes][container_id]}.log"}
     }
+    
+    # Drop some namespaces
+    if [kubernetes][namespace_name] == "kube-system" or
+       [kubernetes][namespace_name] == "sysdig-trial" {
+      drop {}
+    }
 
     json {
       source => "message"
